--- a/index.html
+++ b/index.html
@@ -1,78 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous"/>
 
-  <title>Car Project</title>
+  <title>Araç Projesi</title>
 </head>
-
 <body>
-  <div class="container" style="margin-top:20px;">
-
-    <div class="card row">
+  <div class="container my-4">
+    <div class="card">
       <div class="card-header">Araç Projesi</div>
+
       <div class="card-body">
-        <form id="car-form" name="form">
-          <div class="form-row">
-            <div class="form-group col-md-6">
-              <input class="form-control" type="text" name="title" id="title" placeholder="Araç İsmi">
+        <form id="car-form" name="form" novalidate>
+          <div class="row">
+            <div class="col-md-4 mb-3">
+              <input class="form-control" type="text" name="title" id="title" placeholder="Araç İsmi"/>
             </div>
-            <div class="form-group col-md-6">
-              <input class="form-control" type="text" name="price" id="price" placeholder="Fiyat Bilgisi">
+            <div class="col-md-4 mb-3">
+              <input class="form-control" type="text" name="price" id="price" placeholder="Fiyat Bilgisi (örn: 350000)"/>
             </div>
-            <div class="form-group col-md-6">
-              <input class="form-control" type="text" name="url" id="url" placeholder="Araç Görseli Linki">
+            <div class="col-md-4 mb-3">
+              <input class="form-control" type="text" name="url" id="url" placeholder="Araç Görseli Linki (http/https)"/>
             </div>
           </div>
-          <button type="submit" class="btn btn-danger">Araç Ekleyin</button>
+          <button type="submit" class="btn btn-primary">
+            <i class="fa-solid fa-plus"></i> Araç Ekleyin
+          </button>
         </form>
-        <hr>
-
-        <!-- ALERT ALANI -->
-
       </div>
 
       <div class="card-body">
-        <hr>
+        <hr/>
         <h5 class="card-title" id="cars-title">Araçlar</h5>
-        <hr>
-        <table class="table table-dark">
-          <thead>
-            <tr>
-              <th scope="col">Araç Görseli</th>
-              <th scope="col">Araç Bilgisi</th>
-              <th scope="col">Fiyat Bilgisi</th>
+        <hr/>
 
-            </tr>
-          </thead>
-          <tbody id="cars">
-            <!-- <tr>
-                                            <td><img src="" class="img-fluid img-thumbnail"></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td><a href="#" id = "delete-car" class = "btn btn-danger">Aracı Sil</a></td>
-                                          </tr> -->
-            <!-- <tr>
-                                            <td><img src="" class="img-fluid img-thumbnail"></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td><a href="#" id = "delete-car" class = "btn btn-danger">Aracı Sil</a></td>
-                                          </tr> -->
-          </tbody>
-        </table>
-        <hr>
-        <a id="clear-cars" class="btn btn-dark" href="#">Tüm Araçları Temizleyin</a>
+        <div class="table-responsive">
+          <table class="table table-dark align-middle mb-0">
+            <thead>
+              <tr>
+                <th scope="col">Araç Görseli</th>
+                <th scope="col">Araç Bilgisi</th>
+                <th scope="col">Fiyat Bilgisi</th>
+                <th scope="col" style="width: 140px;">İşlemler</th>
+              </tr>
+            </thead>
+            <tbody id="cars">
+              <!-- Satırlar JS ile eklenecek -->
+            </tbody>
+          </table>
+        </div>
+
+        <hr/>
+        <a id="clear-cars" class="btn btn-danger" href="#">
+          <i class="fa-solid fa-trash"></i> Tüm Araçları Temizleyin
+        </a>
       </div>
     </div>
-
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
@@ -88,9 +78,6 @@
   <script src="car.js"></script>
   <script src="ui.js"></script>
   <script src="storage.js"></script>
-
   <script src="project.js"></script>
-
 </body>
-
 </html>
